--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
-author: GitHub User
+title: 테마 입힌 페이지
+email: acensia@naver.com
+author: Navongs
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
